# rdm-20250521

./: README copy.md  README.md  gitlab-client.spec  maolvmage@163.com  maolvmage@163.com.pub  merge_performance.py  pyproject copy.toml  pyproject.toml  requirements copy.txt  requirements.txt  trae.json  项目问题统计结果.xlsx
.trae/rules/: project_rules.md
product-ui/: __syslog__.html  md5.html  menu.html  sdk授权管理.html  syslog____.html  tot认证登录页面.html  业务规则.html  严重性.html  仪表盘.html  仪表盘_加载更多.html  关键字_正则.html  同步配置.html  命名实体识别.html  图章规则.html  域名控制管理.html  审批通知模板.html  审计列表.html  导出任务审计.html  报告模板管理.html  数据字典.html  数据库指纹.html  文件属性规则.html  文件指纹.html  新增主页.html  新增报告.html  新增报告模板_变量展开-bak.html  新增报告模板_变量展开.html  新增规则.html  新增规则_1.html  智慧分类模型.html  智慧规则提取.html  智能报告管理.html  机构管理.html  查看详情.html  查看详情_1.html  样本分类.html  样本详情.html  样本采集.html  消息中心.html  消息中心2.html  (+10 more)
product-ui/data/: document.js  styles.css
rdm/: README.md  ai_reviewer.py  check_excel.py  code_review_orchestrator.py  deviationTime.py  email_sender.py  gitlab-client.py  gitlab_downloader.py  import pytest.py  issue.py  nginx_log_analyzer.py  nginx_log_analyzerTest.py  overTime.py  personDifficultyTime.py  pyautoguitest.py  report_generator.py  rolesHandle.py  rolesSuper.py  taskDifficultyTime.py  test_code_review.py  test_overTime.py  view_dir_results.py  view_multi_results.py  view_results.py  代码说明.md
rdm/ai-review/: code_review_orchestrator.py  email_sender.py  gitlab_downloader.py  test_code_review.py  test_overTime.py  view_dir_results.py  view_multi_results.py  view_results.py
tests/: __init__.py
(+167 files in other folders)
