[tool.poetry]
name = "rdm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pyautogui = "^0.9.54"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
